# geo3d

./: .buildinfo  .coveragerc  .gitignore  CNAME  CODE_OF_CONDUCT.md  LICENSE.txt  README.md  _pyproject.toml  basic_usage.html  basic_usage.ipynb  constrained_movement.html  fit.html  fit.ipynb  genindex.html  index.html  objects.inv  pyproject.toml  queries.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: build_docs.yml  codeql-analysis.yml  pypi-publish.yml  test.yml
_sources/: basic_usage.ipynb.txt  constrained_movement.ipynb.txt  fit.ipynb.txt  index.rst.txt  queries.ipynb.txt
doc/: index.rst  speed_tests.ipynb
docs/: basic_usage.ipynb  conf.py  fit.ipynb  queries.ipynb
examples/: basic_usage.ipynb  constrained_movement.ipynb  constraints.ipynb  example.ipynb
examples/.ipynb_checkpoints/: example-checkpoint.ipynb
geo3d/: __init__.py  auxiliary.py  constraints.py  fit.py  frame.py  geometry.py  linalg.py  point.py  quaternion.py  query.py  rotation.py  types.py  units.py  vector.py
profiling/: speed_tests.ipynb
src/geo3d/: auxiliary.py  fit.py  plane.py  point.py  rotation.py  units.py  vector.py
tests/: conftest.py  test_fit.py  test_frame.py  test_plane.py  test_point.py  test_quat_algs.py  test_queries.py  test_transform.py  test_vector.py
